Add class-level scaladoc comments