@@ -9,6 +9,16 @@ package com.dmitryleskov.jmh.test {
   import scala.annotation.tailrec
   import scalaz.EphemeralStream
 
+/** Tests to compare the amount of memory consumed by various strict and lazy
+ *  linear Scala collections - standard, third-party, and written by hand.
+ *
+ *  Run with `"-XX:+PrintGCDetails -Xloggc:gc.log"` separately for each collection,
+ *  then load `gc.log` into [[http://www.tagtraum.com/gcviewer.html] GCViewer]]
+ *  or some other tool to calculate the total amount of memory *freed* by GC,
+ *  in ''megabytes''. Storing a single `Int` in the given collection requires
+ *  approximately the same amount of thousands of ''bytes'', because on each
+ *  of the thousand iterations 1024^2 `Int`s get placed into a new collection.
+ */
   @Warmup(iterations = 0)
   @Measurement(iterations = 1000)
   @Fork(1)
@@ -51,13 +61,13 @@ package com.dmitryleskov.jmh.test {
     @GenerateMicroBenchmark
     def testEphemeralStream(): Any = {
       // Make sure each element gets computed
-      def sum(xs: EphemeralStream[Int]): Int = {
+      def force(xs: EphemeralStream[Int]): Unit = {
         @tailrec
         def loop(acc: Int, xs: EphemeralStream[Int]): Int =
           if (xs.isEmpty) acc else loop(acc + xs.head(), xs.tail())
         loop(0, xs)
       }
-      sum(es)
+      force(es)
     }
     
   }
